--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,55 +1,60 @@
-
 <head>
-        <meta charset="UTF-8">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <style>
+        body {
+            background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+        }
+    </style>
 </head>
 
-    <header>
+<header>
 
-        <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="#">GSB</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Accueil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('rapport_index') }}">Rapport</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('medecin_index') }}">Médecins</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Médicaments</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" style="font-weight: bold" >Connecté en tant que </a>
-                        </li>
-                        <div class="dropdown">
-                            <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-                                <strong>{{ app.user.username }}</strong>
-                            </a>
-                            <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-                                <li><a class="dropdown-item" href="#">Nouveau rapport</a></li>
-                                <li><a class="dropdown-item" href="#">Profil</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="{{ path('app_logout') }}">Se déconnecter</a></li>
-                            </ul>
-                        </div>
-                    </ul>
-                </div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="{{ path('home') }}">GSB</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link active" href="{{ path('home') }}">Accueil</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ path('rapport_index') }}">Rapport</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('medecin_index') }}">Médecin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('medicament_index') }}">Médicament</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" style="font-weight: bold" >Connecté en tant que </a>
+                    </li>
+                    <div class="dropdown">
+                        <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-check" style="font-size: 32px"></i>
+
+                            <strong>{{ app.user.username }}</strong>
+                        </a>
+                        <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
+                            <li><a class="dropdown-item" href="{{ path('profil') }}">Profil</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{ path('app_logout') }}">Se déconnecter</a></li>
+                        </ul>
+                    </div>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
 
 
-    </header>
+</header>
 
 
 
@@ -57,33 +62,94 @@
 
 {% block body %}
     <body>
-{% block title %}Hello MainController!{% endblock %}
+    {% block title %}Hello MainController!{% endblock %}
     </body>
 
-    {% if app.user %}
+    {# {% if app.user %}
         <div class="mb-3">
             You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
-    {% endif %}
-{#
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/AP-GestionVisites/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/AP-GestionVisites/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
-    </ul>
-</div>#}
+    {% endif %}#}
 
 
+    <section class="py-5">
+        <div class="container">
+            <h1 class="fw-light">Bonjour {{ app.user.prenom }} {{ app.user.nom }},</h1>
+            <h2>Que désirez-vous faire aujourd'hui ?</h2>
+        </div>
+    </section>
+<br>
 
-bonjour
+    <div class="container">
+        <div class="row">
+            <!-- Team Member 1 -->
+            <div class="col-xl-3 col-md-6 mb-4">
+                <a href="{{ path('rapport_index') }}">
+                    <div class="card border-0 shadow">
+                        <i class="bi bi-journal text-center" style="font-size: 1300%; background-color: #ffffff"></i>
+                        <div class="card-body text-center">
+                            <h5 class="card-title mb-0">Consulter les rapports</h5>
+                            <div class="card-text text-black-50"></div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!-- Team Member 2 -->
+
+            <div class="col-xl-3 col-md-6 mb-4">
+                <a href="{{ path('rapport_new') }}">
+                    <div class="card border-0 shadow">
+                        <i class="bi bi-journal-plus text-center" style="font-size: 1300%; background-color: #ffffff "></i>
+                        <div class="card-body text-center">
+                            <h5 class="card-title mb-0">Créer un nouveau rapport</h5>
+                            <div class="card-text text-black-50"></div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xl-3 col-md-6 mb-4">
+                <a href="{{ path('medecin_new') }}">
+                    <div class="card border-0 shadow">
+                        <i class="bi bi-file-earmark-person text-center" style="font-size: 1300%; background-color: #ffffff "></i>
+                        <div class="card-body text-center">
+                            <h5 class="card-title mb-0">Ajouter un médecin</h5>
+                            <div class="card-text text-black-50"></div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xl-3 col-md-6 mb-4">
+                <a href="{{ path('medicament_index') }}">
+                    <div class="card border-0 shadow">
+                        <i class="bi bi-pencil-square text-center" style="font-size: 1300%; background-color: #ffffff "></i>
+                        <div class="card-body text-center">
+                            <h5 class="card-title mb-0">Consulter les médicaments</h5>
+                            <div class="card-text text-black-50"></div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+
+    {#
+    <style>
+        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    </style>
+
+    <div class="example-wrapper">
+        <h1>Hello {{ controller_name }}! ✅</h1>
+
+        This friendly message is coming from:
+        <ul>
+            <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/AP-GestionVisites/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
+            <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/AP-GestionVisites/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
+        </ul>
+    </div>#}
+
+
 
 
 
