--- a/templates/medecin/_delete_form.html.twig
+++ b/templates/medecin/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('medecin_delete', {'id': medecin.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('medecin_delete', {'id': medecin.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cet élément ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ medecin.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-outline-danger">Supprimer</button>
 </form>
