--- a/templates/rapport/_delete_form.html.twig
+++ b/templates/rapport/_delete_form.html.twig
@@ -1,4 +1,7 @@
-<form method="post" action="{{ path('rapport_delete', {'id': rapport.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+
+<form method="post" action="{{ path('rapport_delete', {'id': rapport.id}) }}" onsubmit="return confirm('Etes-vous sûre de vouloir supprimer ce rapport ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ rapport.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-outline-danger">Supprimer</button>
+{#    <a type="button" class="btn btn-outline-danger"><i class="bi bi-trash">Supprimer</i></a>#}
 </form>
