--- a/templates/rapport/index.html.twig
+++ b/templates/rapport/index.html.twig
@@ -1,46 +1,145 @@
-{#{% extends 'base.html.twig' %}#}
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <style>
+        body {
+            background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+        }
+    </style>
+    <title>Liste des rapports</title>
 </head>
-{% block title %}Rapport index{% endblock %}
+
+<header>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="{{ path('home') }}">GSB</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ path('home') }}">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{{ path('rapport_index') }}">Rapport</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('medecin_index') }}">Médecin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('medicament_index') }}">Médicament</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" style="font-weight: bold" >Connecté en tant que </a>
+                    </li>
+                    <div class="dropdown">
+                        <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-check" style="font-size: 32px"></i>
+
+                            <strong>{{ app.user.username }}</strong>
+                        </a>
+                        <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
+                            <li><a class="dropdown-item" href="{{ path('profil') }}">Profil</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{ path('app_logout') }}"><i class="bi bi-box-arrow-right"></i> Se déconnecter</a></li>
+                        </ul>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
+
+<h1>Rapport index</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <a type="button" class="btn btn-primary btn-lg btn-block" href="{{ path('rapport_new') }}">Créer un rapport</a>
+            </div>
+        </div>
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <form class="form-inline my-2 my-lg-0" method="get">
+                    <input class="form-control mr-sm-2" type="date" placeholder="..." name="date" aria-label="Recherche">
+                    <center>
+                        <button class="btn btn-outline-info btn-lg btn-block" type="submit">Recherche</button>
+                    </center>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% block body %}
-    <h1>Rapport index</h1>
-
-    <div class="fixed-right">
-
-        <a type="button" class="btn btn-primary" href="{{ path('rapport_new') }}">Créer un rapport</a></div>
-    <table class="table">
+    <h1>Liste de vos rapports</h1>
+    <h3 STYLE="padding:0 0 0 20px;">Il y a {{ pluralize(rapports|length, 'résultat', 'résultats')}}.</h3>
+    <table class="table table-light table-striped table-hover">
         <thead>
-            <tr>
-                <th>Id</th>
-                <th>Date</th>
-                <th>Motif</th>
-                <th>Bilan</th>
-                <th>actions</th>
-            </tr>
+        <tr>
+            <th>Rang</th>
+            <th>N° rapport</th>
+            <th>Date</th>
+            <th>Médecin</th>
+            <th>Motif</th>
+            <th>Bilan</th>
+            <th>Actions</th>
+        </tr>
         </thead>
         <tbody>
+        {% set inc = 1 %}
         {% for rapport in rapports %}
             <tr>
-                <td>{{ rapport.id }}</td>
+                <td>{{inc }}</td>
+                <td style="text-align: center">{{ rapport.id }}</td>
                 <td>{{ rapport.date ? rapport.date|date('Y-m-d') : '' }}</td>
+                <td>{{ rapport.medecin.nom }} {{ rapport.medecin.prenom }}</td>
                 <td>{{ rapport.motif }}</td>
                 <td>{{ rapport.bilan }}</td>
                 <td>
-                    <a type="button" class="btn btn-info" href="{{ path('rapport_show', {'id': rapport.id}) }}">show</a>
-                    <a type="button" class="btn btn-outline-success" href="{{ path('rapport_edit', {'id': rapport.id}) }}">edit</a>
+                    <a type="button" class="btn btn-outline-info" href="{{ path('rapport_show', {'id': rapport.id}) }}"><i class="bi bi-three-dots"> Détails</i></a>
+                    <a type="button" class="btn btn-outline-success" href="{{ path('rapport_edit', {'id': rapport.id}) }}"><i class="bi bi-pencil-square"> Modifier</i></a>
+                    <a type="button" class="">{{ include('rapport/_delete_form.html.twig') }}</a>
+
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="5">Aucun rapport n'a été trouvé</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
+
+
+{% endblock %}
+
+
+{% block javascript %}
+<script>
+    const addFormToCollection = (e) => {
+        const collectionHolder = document.querySelector('.' + e.currentTarget.dataset.collectionHolderClass);
+        const item = document.createElement('li');
+        item.innerHTML = collectionHolder
+            .dataset
+            .prototype
+            .replace(
+                /__name__/g,
+                collectionHolder.dataset.index
+            );
+        collectionHolder.appendChild(item);
+        collectionHolder.dataset.index++;
+    };
+    document
+        .querySelectorAll('.add_item_link')
+        .forEach(btn => btn.addEventListener("click", addFormToCollection));
+</script>
 
 {% endblock %}
