--- a/templates/rapport/show.html.twig
+++ b/templates/rapport/show.html.twig
@@ -1,34 +1,157 @@
-{% extends 'base.html.twig' %}
+<head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <style>
+        body {
+            background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+        }
+    </style>
+</head>
 
-{% block title %}Rapport{% endblock %}
+<header>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="{{ path('home') }}">GSB</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ path('home') }}">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{{ path('rapport_index') }}">Rapport</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('medecin_index') }}">Médecin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('medicament_index') }}">Médicament</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" style="font-weight: bold" >Connecté en tant que </a>
+                    </li>
+                    <div class="dropdown">
+                        <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-check" style="font-size: 32px"></i>
+
+                            <strong>{{ app.user.username }}</strong>
+                        </a>
+                        <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
+                            <li><a class="dropdown-item" href="{{ path('profil') }}">Profil</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{ path('app_logout') }}"><i class="bi bi-box-arrow-right"></i> Se déconnecter</a></li>
+                        </ul>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
+<h1>Rapport index</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <a type="button" class="btn btn-outline-primary btn-lg btn-block" href="{{ path('rapport_index') }}">Retour</a>
+            </div>
+        </div>
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <a type="button" class="btn btn-success btn-lg btn-block" href="{{ path('rapport_edit', {'id': rapport.id}) }}">Modifier</a>
+            </div>
+        </div>
+        {#<div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <a type="button" class="btn btn-danger btn-lg btn-block" href="{{ path('rapport_delete', {'id': rapport.id}) }}">Supprimer</a>
+            </div>
+        </div>#}
+    </div>
+</div>
+
+
+
 
 {% block body %}
-    <h1>Rapport</h1>
 
-    <table class="table">
-        <tbody>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-10 col-xl-9 mx-auto">
+                <div class="card flex-row my-5 border-0 shadow rounded-3 overflow-hidden">
+                    <div class="card-img-left d-none d-md-flex">
+                        <!-- Background image for card set in CSS! -->
+                    </div>
+                    <div class="card-body p-4 p-sm-5">
+                        <h2>Rapport n°{{ rapport.id }}</h2>
+                        <table class="table">
+                            <tbody>
+                            <tr>
+                                <th>Date</th>
+                                <td>{{ rapport.date ? rapport.date|date('Y-m-d') : '' }}</td>
+                            </tr>
+                            <tr>
+                                <th>Médecin</th>
+                                <td>{{ rapport.medecin.nom }} {{ rapport.medecin.prenom }}  <a type="button" class="btn btn-outline-info justify-content-end" style="text-align: right" href="{{ path('medecin_show', {'id': rapport.medecin.id}) }}"><i class="bi bi-three-dots"> Consulter les détails du médecin</i></a></td>
+                            </tr>
+                            <tr>
+                                <th>Motif</th>
+                                <td>{{ rapport.motif }}</td>
+                            </tr>
+                            <tr>
+                                <th>Bilan</th>
+                                <td>{{ rapport.bilan }}</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <table class="table table-success table-striped table-hover">
+            <thead>
             <tr>
-                <th>Id</th>
-                <td>{{ rapport.id }}</td>
+                <th>Quantité donnée</th>
+                <th>Identifiant</th>
+                <th>Nom commercial</th>
+                <th>Identifiant Famille</th>
+                <th>Composition</th>
+                <th>Effets</th>
+                <th>Contre indications</th>
+                <th>Actions</th>
             </tr>
-            <tr>
-                <th>Date</th>
-                <td>{{ rapport.date ? rapport.date|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Motif</th>
-                <td>{{ rapport.motif }}</td>
-            </tr>
-            <tr>
-                <th>Bilan</th>
-                <td>{{ rapport.bilan }}</td>
-            </tr>
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
 
-    <a href="{{ path('rapport_index') }}">back to list</a>
 
-    <a href="{{ path('rapport_edit', {'id': rapport.id}) }}">edit</a>
+            {% for offrir in rapport.offrirs %}
+                <tr>
+                    <td style="text-align: center">{{ offrir.quantite }}</td>
+                    <td>{{ offrir.medicament.id }}</td>
+                    <td>{{ offrir.medicament.nomCommercial }}</td>
+                    <td>{{ offrir.medicament.familleId }}</td>
+                    <td>{{ offrir.medicament.composition }}</td>
+                    <td>{{ offrir.medicament.effets }}</td>
+                    <td>{{ offrir.medicament.contreIndications }}</td>
+                    <td>
+                        <a type="button" class="btn btn-outline-info" href="{{ path('medicament_show', {'id': offrir.medicament.id}) }}"><i class="bi bi-three-dots"> Détails</i></a>
+                    </td>
 
-    {{ include('rapport/_delete_form.html.twig') }}
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="5">Aucun médicament n'a été enregistré</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+
 {% endblock %}
+
